--- a/385_Final_Project.qsf
+++ b/385_Final_Project.qsf
@@ -259,4 +259,5 @@ set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
 set_global_assignment -name SYSTEMVERILOG_FILE palette.sv
+set_global_assignment -name SYSTEMVERILOG_FILE SCORE_REG.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
