--- a/db/385_Final_Project_partition_pins.json
+++ b/db/385_Final_Project_partition_pins.json
@@ -272,6 +272,10 @@
 					"strict" : false
 				},
 				{
+					"name" : "VGA_R[0]",
+					"strict" : false
+				},
+				{
 					"name" : "VGA_R[1]",
 					"strict" : false
 				},
