--- a/385_Final_Project.qsf
+++ b/385_Final_Project.qsf
@@ -240,15 +240,6 @@ set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity D
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name QIP_FILE labfinalsoc/synthesis/labfinalsoc.qip
-set_global_assignment -name SYSTEMVERILOG_FILE HexDriver.sv
-set_global_assignment -name SYSTEMVERILOG_FILE labfinaltop.sv
-set_global_assignment -name SYSTEMVERILOG_FILE font_rom.sv
-set_global_assignment -name SYSTEMVERILOG_FILE vga_text_avl_interface.sv
-set_global_assignment -name SYSTEMVERILOG_FILE clk_two.sv
-set_global_assignment -name SYSTEMVERILOG_FILE drawing.sv
-set_global_assignment -name SYSTEMVERILOG_FILE VGA_controller.sv
-set_global_assignment -name QIP_FILE OCM.qip
 set_global_assignment -name ENABLE_OCT_DONE ON
 set_global_assignment -name EXTERNAL_FLASH_FALLBACK_ADDRESS 00000000
 set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
@@ -258,6 +249,16 @@ set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_global_assignment -name SYSTEMVERILOG_FILE statemachine.sv
+set_global_assignment -name SYSTEMVERILOG_FILE gameboard.sv
+set_global_assignment -name QIP_FILE labfinalsoc/synthesis/labfinalsoc.qip
+set_global_assignment -name SYSTEMVERILOG_FILE HexDriver.sv
+set_global_assignment -name SYSTEMVERILOG_FILE labfinaltop.sv
+set_global_assignment -name SYSTEMVERILOG_FILE font_rom.sv
+set_global_assignment -name SYSTEMVERILOG_FILE vga_text_avl_interface.sv
+set_global_assignment -name SYSTEMVERILOG_FILE clk_two.sv
+set_global_assignment -name SYSTEMVERILOG_FILE drawing.sv
+set_global_assignment -name SYSTEMVERILOG_FILE VGA_controller.sv
 set_global_assignment -name SYSTEMVERILOG_FILE palette.sv
 set_global_assignment -name SYSTEMVERILOG_FILE SCORE_REG.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
